feat: add Parts v.1